added Our story section

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <section class="title">
   <div class="content">
-    <div class="text">
+    <div class="title-text">
         <img src="..\assets\img\nlc-logo-green.jpg">
         <h1>New Living Church</h1>
         <div class="grid-x">
@@ -19,21 +19,61 @@
   <div class="content">
     <div class="text">
       <span class="big">
-        Everyone is welcome in our church.<br/>
-        Join us this Sunday!
+        We are a warm and welcoming family of God <br/> where people from different nations grow together in Christ.<br/>
+        Join us this Sunday.
       </span>
       <span class="small">Need a ride? Connect with us.</span>
 
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2882.3467654099145!2d-79.32539348449927!3d43.74489537911833!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d4cd88903938e1%3A0xa4308fc8144c8ed3!2s36+Broadlands+Blvd%2C+North+York%2C+ON+M3A+1J3!5e0!3m2!1sen!2sca!4v1515719147534" width="100%" height="400" frameborder="0" style="border:0" allowfullscreen></iframe> 
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2882.3467654099145!2d-79.32539348449927!3d43.74489537911833!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d4cd88903938e1%3A0xa4308fc8144c8ed3!2s36+Broadlands+Blvd%2C+North+York%2C+ON+M3A+1J3!5e0!3m2!1sen!2sca!4v1515719147534" width="85%" height="350" frameborder="0" style="border:0" allowfullscreen></iframe> 
     </div>
   </div>
 </section>
-<section class="about-us">
-  <div class="content row">
-    <h1>About Us</h1>
-    <app-about-us-popup></app-about-us-popup>
+<section class="gallery-1">
+  <div class="text">
+    <span class="big">Our Story</span>
+    <span class="small">Begun in 2009 as a Toronto campus of the Vancouver-based multisite congregation HFAN, it was originally an Indonesian-speaking church, reaching out to Indonesians. In 2012, the church became independent from the Vancouver body and began an affiliation with The Jesus Network in Toronto. Through prayer, the church discerned a vision to broaden their outreach beyond Indonesian speakers. House for All Nations Toronto changed its name to New Living Church and began English services in 2016.</span>
   </div>
+  <div class="grid-x">
+    <div class="small-6">
+      <img src="..\assets\img\chat.jpg">
+    </div>
+    <div class="small-6">
+      <img src="..\assets\img\laugh2.jpg">
+    </div>
+  </div>
+  <div class="grid-x">
+      <div class="small-6">
+        <img src="..\assets\img\food.jpg">
+      </div>
+      <div class="small-6">
+        <img src="..\assets\img\youth.jpg">
+      </div>
+    </div>
 </section>
-<section class="connect">
-  <div></div>
-</section>
+  <!-- <div class="text">
+    <span class="big">
+        Celebrating diversity in the growing family of God, <br/>
+        bringing Jesus to various cultural backgrounds in Toronto.
+    </span>
+  </div>
+  <div class="button-section">
+    <div class="box">
+      <img class="">
+      <div></div>
+    </div>
+  
+  </div> -->
+
+<!-- <section class="about-us">
+  <div class="grid-x text">
+    <div class="small-4">
+      <span class="medium clickable">About Us</span>
+    </div>
+    <div class="small-4">
+      <span class="medium clickable">Latest Messages</span>
+    </div>
+    <div class="small-4">
+      <span class="medium clickable">Connect With Us</span>
+    </div>
+  </div>
+</section> -->
