--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,6 +28,9 @@
     </div>
   </div>
 </section>
+<section class="gallery">
+
+</section>
 <section class="gallery-1">
   <div class="text">
     <span class="big">Our Story</span>
@@ -50,19 +53,22 @@
       </div>
     </div>
 </section>
-  <!-- <div class="text">
-    <span class="big">
-        Celebrating diversity in the growing family of God, <br/>
-        bringing Jesus to various cultural backgrounds in Toronto.
-    </span>
-  </div>
-  <div class="button-section">
-    <div class="box">
-      <img class="">
-      <div></div>
+<section class="actions">
+  <div class="grid-x">
+    <div class="small-4">
+      <span>Connect</span>
+      <span>New to the city? Looking for a home church? Connect with us We'd love to meet you!</span>
     </div>
-  
-  </div> -->
+    <div class="small-4">
+      <span>Latest Message</span>
+      <span>Listen to the latest message from our current sermon series, "The 1 True Gospel". Last week sermon topic was "A Different Gospel".</span>
+    </div>
+    <div class="small-4">
+      <span>Resources</span>
+      <span>Announcements, sermon notes and photo galleries</span>
+    </div>
+  </div>
+</section>
 
 <!-- <section class="about-us">
   <div class="grid-x text">
