add footer + action section

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -54,19 +54,30 @@
     </div>
 </section>
 <section class="actions">
-  <div class="grid-x">
-    <div class="small-4">
-      <span>Connect</span>
-      <span>New to the city? Looking for a home church? Connect with us We'd love to meet you!</span>
+  <div class="grid-x text">
+    <div class="small-5">
+      <span class="big">Connect</span>
+      <span class="small">New to the city or looking for a home church? <br/> Reach out to us,  we'd love to meet you! <br/></span>
+      <div class="action-box">
+        <a>Call us: 647-878-2408</a>
+      </div>
     </div>
-    <div class="small-4">
-      <span>Latest Message</span>
-      <span>Listen to the latest message from our current sermon series, "The 1 True Gospel". Last week sermon topic was "A Different Gospel".</span>
+    <div class="small-1 liner"></div>
+    <div class="small-1"></div>
+    <div class="small-5">
+      <span class="big">Latest Message</span>
+      <span class="small">Listen to the latest message from our current sermon series, "The 1 True Gospel".</span>
+      <div class="action-box">
+        <a>Sermon Station</a>
+      </div>
     </div>
-    <div class="small-4">
-      <span>Resources</span>
-      <span>Announcements, sermon notes and photo galleries</span>
-    </div>
+  </div>
+</section>
+<section class="footer">
+  <div class="text">
+    <h3>New Living Church</h3>
+    <span class="small">36 Broadlands Blvd, North York, ON, Canada <br/></span>
+    <span class="small">Ph. 647-878-2408</span>
   </div>
 </section>
 
