modify style + move sermon up

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,12 @@
 <section class="title">
   <div class="content">
-    <div class="title-text">
+      <!-- <p><a data-toggle="panel">Toggle Panel</a></p>
+
+      <div class="callout" id="panel" data-toggler data-animate="hinge-in-from-top spin-out">
+        <h4>Hello!</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta quas optio alias voluptas nobis iusto mollitia asperiores incidunt reprehenderit doloribus voluptatibus officiis minus, inventore, quasi nisi. Consequuntur, quidem. Sint, dicta?</p>
+      </div> -->
+    <div  data-toggler data-animate="fade-in" class="title-text">
         <img src="..\assets\img\nlc-logo-green.jpg">
         <h1>New Living Church</h1>
         <div class="grid-x">
@@ -12,7 +18,6 @@
           </div>
         </div>
     </div>
-    
   </div>
 </section>
 <section class="service-location">
@@ -24,7 +29,18 @@
       </span>
       <span class="small">Need a ride? Connect with us.</span>
 
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2882.3467654099145!2d-79.32539348449927!3d43.74489537911833!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d4cd88903938e1%3A0xa4308fc8144c8ed3!2s36+Broadlands+Blvd%2C+North+York%2C+ON+M3A+1J3!5e0!3m2!1sen!2sca!4v1515719147534" width="85%" height="350" frameborder="0" style="border:0" allowfullscreen></iframe> 
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2882.3467654099145!2d-79.32539348449927!3d43.74489537911833!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d4cd88903938e1%3A0xa4308fc8144c8ed3!2s36+Broadlands+Blvd%2C+North+York%2C+ON+M3A+1J3!5e0!3m2!1sen!2sca!4v1515719147534" width="100%" height="500" frameborder="0" style="border:0" allowfullscreen></iframe> 
+    </div>
+  </div>
+</section>
+<section class="sermon">
+  <div class="text">
+    <div class="">
+      <span class="big">Latest Message</span>
+      <span class="small">Listen to the latest message from our current sermon series, "The 1 True Gospel".</span>
+      <div class="action-box">
+        <a>Sermon Station</a>
+      </div>
     </div>
   </div>
 </section>
@@ -53,22 +69,13 @@
       </div>
     </div>
 </section>
-<section class="actions">
-  <div class="grid-x text">
-    <div class="small-5">
+<section class="sermon">
+  <div class="text">
+    <div>
       <span class="big">Connect</span>
       <span class="small">New to the city or looking for a home church? <br/> Reach out to us,  we'd love to meet you! <br/></span>
       <div class="action-box">
         <a>Call us: 647-878-2408</a>
-      </div>
-    </div>
-    <div class="small-1 liner"></div>
-    <div class="small-1"></div>
-    <div class="small-5">
-      <span class="big">Latest Message</span>
-      <span class="small">Listen to the latest message from our current sermon series, "The 1 True Gospel".</span>
-      <div class="action-box">
-        <a>Sermon Station</a>
       </div>
     </div>
   </div>
@@ -80,17 +87,3 @@
     <span class="small">Ph. 647-878-2408</span>
   </div>
 </section>
-
-<!-- <section class="about-us">
-  <div class="grid-x text">
-    <div class="small-4">
-      <span class="medium clickable">About Us</span>
-    </div>
-    <div class="small-4">
-      <span class="medium clickable">Latest Messages</span>
-    </div>
-    <div class="small-4">
-      <span class="medium clickable">Connect With Us</span>
-    </div>
-  </div>
-</section> -->
