add link to sermon cloud

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -38,7 +38,7 @@
     <div class="">
       <span class="big">Latest Message</span>
       <span class="small">Listen to the latest message from our current sermon series, "The 1 True Gospel".</span>
-      <div class="action-box">
+      <div class="action-box" (click)="openSermonCloud()">
         <a>Sermon Station</a>
       </div>
     </div>
@@ -69,7 +69,7 @@
       </div>
     </div>
 </section>
-<section class="sermon">
+<section class="connect">
   <div class="text">
     <div>
       <span class="big">Connect</span>
