--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,6 @@
 @include foundation-everything(true);
 
 // Motion-ui
-@import '~motion-ui/motion-ui';
-@include motion-ui-transitions;
-@include motion-ui-animations;
+// @import '~motion-ui/motion-ui';
+// @include motion-ui-transitions;
+// @include motion-ui-animations;
