--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -111,7 +111,53 @@
 
 .sermon {
     height: 315px;
-    background: hsl(0, 0%, 26%);
+    background: #424242;
+    color: white;
+
+    .text {
+        background: none;
+
+        .big, .small {
+            color: white;
+            text-shadow: none;
+        }
+
+        .small {
+            padding-bottom: 35px;
+        }
+
+        .action-box {
+            width: 30%;
+            text-align: center;
+            outline: solid 3px;
+            padding: 20px;
+            margin: auto;
+            cursor: pointer;
+
+            a {
+                color: white;
+            }
+
+            &:hover {
+                background: white;
+                a {
+                    color: #424242;
+                    text-decoration: underline;
+                }
+            }
+        }
+    }
+}
+
+.gallery{
+    height: 600px;
+    background: url('../assets/img/worship-grayscale-crop.jpg') no-repeat;
+}
+
+
+.connect {
+    height: 315px;
+    background: #424242;
     color: white;
 
     .text {
@@ -135,56 +181,7 @@
 
             a {
                 color: white;
-            }
-        }
-    }
-}
-
-.gallery{
-    height: 600px;
-    background: url('../assets/img/worship-grayscale-crop.jpg') no-repeat;
-}
-
-
-.actions {
-    height: auto;
-    background: hsl(0, 0%, 26%);
-    color: white;
-
-    .grid-x {
-        width: 70%;
-        margin: auto;
-        height: 100%;
-
-        padding: 80px 0;
-        
-        * {
-            display: block;
-        }
-
-        .liner {
-            border-right: solid 2px;
-        }
-        
-    }
-
-    .text {
-        background: none;
-
-        .big, .small {
-            color: white;
-            text-shadow: none;
-        }
-
-        .action-box {
-            width: 50%;
-            text-align: center;
-            outline: solid 3px;
-            padding: 20px;
-            margin: auto;
-
-            a {
-                color: white;
+                cursor: default;
             }
         }
     }
