add aos and animate the title section

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,19 +1,17 @@
 <section class="title">
   <div class="content">
-      <!-- <p><a data-toggle="panel">Toggle Panel</a></p>
 
-      <div class="callout" id="panel" data-toggler data-animate="hinge-in-from-top spin-out">
-        <h4>Hello!</h4>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta quas optio alias voluptas nobis iusto mollitia asperiores incidunt reprehenderit doloribus voluptatibus officiis minus, inventore, quasi nisi. Consequuntur, quidem. Sint, dicta?</p>
-      </div> -->
-    <div  data-toggler data-animate="fade-in" class="title-text">
-        <img src="..\assets\img\nlc-logo-green.jpg">
-        <h1>New Living Church</h1>
+    <div class="title-text">
+        <div data-aos="fade-down" data-aos-duration="1500" data-aos-delay="300">
+            <img src="..\assets\img\nlc-logo-green.jpg">
+            <h1>New Living Church</h1>
+        </div>
+        
         <div class="grid-x">
-          <div class="small-6 cell location">
+          <div class="small-6 cell location" data-aos-duration="1500" data-aos="fade-right">
             <span>36 Broadlands Blvd <br/> North York <br/> ON M3A 1J3</span>
           </div>
-          <div class="small-6 cell">
+          <div class="small-6 cell" data-aos-duration="1500" data-aos="fade-left">
             <span>Sundays <br/> 2:30PM (Indonesian Service) <br/> 4:00PM (English Service) </span>
           </div>
         </div>
